--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+atomicwrites==1.3.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
 decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
+graphviz==0.13
 importlib-metadata==0.23
 ipykernel==5.1.2
 ipython==7.8.0
@@ -22,15 +24,22 @@ more-itertools==7.2.0
 nbconvert==5.6.0
 nbformat==4.4.0
 notebook==6.0.1
+packaging==19.2
 pandocfilters==1.4.2
 parso==0.5.1
+pathlib2==2.3.5
 pexpect==4.7.0
 pickleshare==0.7.5
+pluggy==0.13.0
+ply==3.11
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
+py==1.8.0
 Pygments==2.4.2
+pyparsing==2.4.2
 pyrsistent==0.15.4
+pytest==5.2.1
 python-dateutil==2.8.0
 pyzmq==18.1.0
 qtconsole==4.5.5
