--- a/metaL.ini
+++ b/metaL.ini
@@ -2,4 +2,4 @@
 # metaL system
 \ line comment
 
--01 +02.30 -4e+5 0xDeadBeef 0b1101 ? . ? \ number literals
+`symbol -01 +02.30 -4e+5 0xDeadBeef 0b1101 ? . ? \ number literals
