Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/metaL.ini
+++ b/metaL.ini
@@ -3,3 +3,7 @@
 \ line comment
 
 `symbol -01 +02.30 -4e+5 0xDeadBeef 0b1101 ? . ? \ number literals
+
+'string\n\tparsing' ? .
+
+\ `1 `2 `3 vm ?p \ plot system graph diagram
