--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ atomicwrites==1.3.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
+Click==7.0
 decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
-graphviz==0.13
+Flask==1.1.1
+graphviz==0.13.1
 importlib-metadata==0.23
 ipykernel==5.1.2
 ipython==7.8.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.3
 jsonschema==3.1.1
@@ -51,5 +54,6 @@ tornado==6.0.3
 traitlets==4.3.3
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.16.0
 widgetsnbextension==3.5.1
 zipp==0.6.0
